WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236905
Fetching website data may get wrong record after migrating data to general storage directory
https://bugs.webkit.org/show_bug.cgi?id=236905
Summary
Fetching website data may get wrong record after migrating data to general st...
Sihui Liu
Reported
2022-02-19 21:14:23 PST
...
Attachments
Patch
(5.98 KB, patch)
2022-02-19 23:12 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.98 KB, patch)
2022-02-20 23:09 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.95 KB, patch)
2022-02-20 23:09 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2022-02-19 23:12:34 PST
Created
attachment 452679
[details]
Patch
Sihui Liu
Comment 2
2022-02-20 23:09:17 PST
Created
attachment 452712
[details]
Patch for landing
Sihui Liu
Comment 3
2022-02-20 23:09:57 PST
Created
attachment 452713
[details]
Patch for landing
EWS
Comment 4
2022-02-21 01:24:50 PST
Committed
r290239
(
247564@main
): <
https://commits.webkit.org/247564@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 452713
[details]
.
Radar WebKit Bug Importer
Comment 5
2022-02-21 01:25:18 PST
<
rdar://problem/89223493
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug